--- a/DataChecker/DataChecker/DataChecker.csproj
+++ b/DataChecker/DataChecker/DataChecker.csproj
@@ -56,6 +56,7 @@
     <Analyzer Include="..\packages\SecurityCodeScan.3.5.4.0\analyzers\dotnet\SecurityCodeScan.dll" />
     <Analyzer Include="..\packages\SecurityCodeScan.3.5.4.0\analyzers\dotnet\YamlDotNet.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
