Finished TableMapping and mapping unit tests

--- a/DataChecker/DataChecker/DataChecker.csproj
+++ b/DataChecker/DataChecker/DataChecker.csproj
@@ -45,6 +45,8 @@
     <Compile Include="ErrorHandling\LogWriter.cs" />
     <Compile Include="Importers\SqlDataImporter.cs" />
     <Compile Include="Importers\SqlServerImporter.cs" />
+    <Compile Include="Mapping\ColumnMapping.cs" />
+    <Compile Include="Mapping\TableMapping.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
