Added IDataSamplingStrategy, DataSampler and SequentialDataSampler. SequentialDataSampler needs more work

--- a/DataChecker/DataChecker/DataChecker.csproj
+++ b/DataChecker/DataChecker/DataChecker.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Mapping\TableMapping.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sampling\IDataSamplingStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
