Somehow ColumnMappingTest became unlinked...re-added to test project. Also fixed somethings which have gone wrong with versioning

--- a/DataChecker/DataCheckerTest/DataCheckerTest.csproj
+++ b/DataChecker/DataCheckerTest/DataCheckerTest.csproj
@@ -64,7 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ErrorHandling\LogWriter.cs" />
+    <Compile Include="ErrorHandling\LogWriterTest.cs" />
     <Compile Include="Importers\SqlServerImporterTest.cs" />
     <Compile Include="Mapping\ColumnMappingTest.cs" />
     <Compile Include="Mapping\TableMappingTest.cs" />
