--- a/DataChecker/DataChecker/DataChecker.csproj
+++ b/DataChecker/DataChecker/DataChecker.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataChecker.cs" />
     <Compile Include="ErrorHandling\LogWriter.cs" />
+    <Compile Include="Helpers\DataTableHelper.cs" />
     <Compile Include="Helpers\QueryBuilders\PostgreSqlQueryBuilder.cs" />
     <Compile Include="Helpers\QueryBuilders\SqlQueryBuilder.cs" />
     <Compile Include="Helpers\QueryBuilders\SqlServerQueryBuilder.cs" />
